// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatListItem tests Behaviour Press 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChatListItem
    avatar={null}
    id="Test id"
    lastMessage={undefined}
    name="Test list item"
    onPress={[MockFunction]}
    unreadMessages={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "AdditionalLeftView": [Function],
      "AdditionalView": [Function],
      "disabled": false,
      "disclosureIconVisible": true,
      "iconSource": null,
      "id": "Test id",
      "onPress": [MockFunction],
      "style": Object {
        "height": 72,
      },
      "subtitle": undefined,
      "text": "Test list item",
      "textStyle": Object {
        "color": "#58595B",
        "fontFamily": "Roboto",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 0,
        "lineHeight": 22,
      },
      "value": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "AdditionalLeftView": [Function],
        "AdditionalView": [Function],
        "disabled": false,
        "disclosureIconVisible": true,
        "iconSource": null,
        "id": "Test id",
        "onPress": [MockFunction],
        "style": Object {
          "height": 72,
        },
        "subtitle": undefined,
        "text": "Test list item",
        "textStyle": Object {
          "color": "#58595B",
          "fontFamily": "Roboto",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        "value": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ChatListItem tests Rendering With text 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChatListItem
    avatar={null}
    id="1"
    lastMessage="Some message"
    name="Test list item"
    onPress={[MockFunction]}
    unreadMessages={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "AdditionalLeftView": [Function],
      "AdditionalView": [Function],
      "disabled": false,
      "disclosureIconVisible": true,
      "iconSource": null,
      "id": "1",
      "onPress": [MockFunction],
      "style": Object {
        "height": 72,
      },
      "subtitle": "Some message",
      "text": "Test list item",
      "textStyle": Object {
        "color": "#58595B",
        "fontFamily": "Roboto",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 0,
        "lineHeight": 22,
      },
      "value": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "AdditionalLeftView": [Function],
        "AdditionalView": [Function],
        "disabled": false,
        "disclosureIconVisible": true,
        "iconSource": null,
        "id": "1",
        "onPress": [MockFunction],
        "style": Object {
          "height": 72,
        },
        "subtitle": "Some message",
        "text": "Test list item",
        "textStyle": Object {
          "color": "#58595B",
          "fontFamily": "Roboto",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        "value": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
